# crisis_related_tweets_analysis

./: .gitignore  README.md  classifier.py  constants.py  dataset.py  human_train.py  pyproject.toml  requirements.txt  setup.py  train_test_funcs.py  utils.py
notebooks/: data_processing.ipynb  eda.ipynb  plot_results.ipynb  process_and_eda.ipynb  visualize_inference.ipynb
tweet_classification/: classifier.py  constants.py  dataset.py  human_test.py  human_train.py  info_test.py  info_train.py  train_test_funcs.py  utils.py
