[project]
name = "semantic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pre-commit>=4.3.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
